--- a/package.json
+++ b/package.json
@@ -11,17 +11,33 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "^14.0.0",
-    "@angular/common": "^14.0.0",
-    "@angular/compiler": "^14.0.0",
-    "@angular/core": "^14.0.0",
-    "@angular/forms": "^14.0.0",
-    "@angular/platform-browser": "^14.0.0",
-    "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/router": "^14.0.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "^14.1.3",
+    "@angular/common": "^14.1.3",
+    "@angular/compiler": "^14.1.3",
+    "@angular/compiler-cli": "^14.1.3",
+    "@angular/core": "^14.1.3",
+    "@angular/forms": "^14.1.3",
+    "@angular/localize": "^14.1.3",
+    "@angular/platform-browser": "^14.1.3",
+    "@angular/platform-browser-dynamic": "^14.1.3",
+    "@angular/router": "^14.1.3",
+    "@angular/service-worker": "^14.1.3",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@ng-select/ng-select": "^9.0.2",
+    "@ngrx/effects": "^14.2.0",
+    "@ngrx/router-store": "^14.2.0",
+    "@ngrx/store": "^14.2.0",
+    "@popperjs/core": "^2.10.2",
+    "@spartacus/core": "^4.3.7",
+    "@spartacus/storefront": "^4.3.7",
+    "angular-oauth2-oidc": "^13.0.1",
+    "i18next": "^21.9.1",
+    "i18next-http-backend": "^1.4.1",
+    "ngx-infinite-scroll": "^14.0.0",
+    "rxjs": "^7.5.6",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4",
+    "zone.js": "^0.11.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.0",
